add check configuration role for masters and slaves

--- a/cluster.yaml
+++ b/cluster.yaml
@@ -1,13 +1,13 @@
 ---
 - hosts: all
-  gather_facts: false
+  gather_facts: true
   roles:
     - { role: network/vrack-ifup, tags: vrack-ifup }
     - { role: network/firewall, tags: firewall }
     - { role: bind9/preinstall, tags: bind9-preinstall }
 
 - hosts: master
-  gather_facts: true
+  gather_facts: false
   roles:
     - { role: bind9/master/rndc, tags: bind9-master-rndc }
     - { role: bind9/master/config, tags: bind9-master-cfg }
@@ -18,8 +18,12 @@
     - { role: bind9/slaves/rndc, tags: bind9-slaves-rndc }
     - { role: bind9/slaves/config, tags: bind9-slaves-cfg }
 
-- hosts: all
+- hosts: master
   gather_facts: false
   roles:
     - { role: bind9/master/check, tags: bind9-master-check }
+
+- hosts: slaves
+  gather_facts: false
+  roles:
     - { role: bind9/slaves/check, tags: bing9-slaves-check }
