--- a/cluster.yaml
+++ b/cluster.yaml
@@ -6,22 +6,21 @@
     - { role: network/firewall, tags: firewall }
     - { role: bind9/preinstall, tags: bind9-preinstall }
 
-- hosts: master
+- hosts: masters
   gather_facts: false
   roles:
-    - { role: bind9/master/rndc, tags: bind9-master-rndc }
-    - { role: bind9/master/config, tags: bind9-master-cfg }
+    - { role: bind9/masters/rndc, tags: bind9-masters-rndc }
+    - { role: bind9/masters/config, tags: bind9-masters-cfg }
 
 - hosts: slaves
   gather_facts: false
   roles:
-    - { role: bind9/slaves/rndc, tags: bind9-slaves-rndc }
     - { role: bind9/slaves/config, tags: bind9-slaves-cfg }
 
-- hosts: master
+- hosts: masters
   gather_facts: false
   roles:
-    - { role: bind9/master/check, tags: bind9-master-check }
+    - { role: bind9/masters/check, tags: bind9-masters-check }
 
 - hosts: slaves
   gather_facts: false
