--- a/roles/network/vrack-ifup/tasks/main.yaml
+++ b/roles/network/vrack-ifup/tasks/main.yaml
@@ -1,7 +1,26 @@
 ---
+- name: [DEBUG] distribution name
+  debug:
+    msg: "Distribution name : {{ ansible_distribution }}"
+  when: debug
+
+- name: [DEBUG] distribution version
+  debug:
+    msg: "Distribution version : {{ ansible_distribution_version }}"
+  when: debug
+
 - name: network vrack
   copy:
     dest: /etc/network/interfaces.d/70-vrack.cfg
     content: "auto ens4\niface ens4 inet dhcp\n"
+  when: ansible_distribution == 'Debian' and ansible_distribution_version == '9.0'
+  notify:
+  - network-restart
+
+- name: network vrack
+  copy:
+    dest: /etc/network/interfaces
+    content: "auto eth1\niface eth1 inet dhcp\n"
+  when: ansible_distribution == 'Debian' and ansible_distribution_version == '10.0'
   notify:
   - network-restart
